fix(#221): adjust margins and height to prevent overflow

--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -20,10 +20,10 @@
   }
 
   &-reduced {
-    height: 110px;
+    height: 130px;
 
     @media (max-width: breakpoints.$sm) and (orientation: landscape) {
-      height: 90px;
+      height: 110px;
     }
 
     @media (max-width: breakpoints.$xsm) {
